--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hi My name is Emad
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <title>Syrian Kitchen - cooking is fun!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="icon" href="chef.jpg" type="image/jpg" sizes="16x16">
+</head>
+
+<body>
+  <div id="header">
+    <span><img src="chef.jpg" alt="Cartoon Chef Picture" class="image">
+    <h1 id="head1">Syrain Kitchen</h1></span>	
+	<select id="lang-list">
+      <option value="English" style="background-image:url(England-Flag.png);">English</option>
+      <option value="Arabic" style="background-image:url(Syrian-Flag.png);">Arabic</option>
+      <option value="Danish" style="background-image:url(Dansih-Flag.jpg);">Dansih</option>
+    </select>
+	  <input type="text" name="search" placeholder="Search..">
+  </div>
+  <div class="navbar">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+	<a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div>
+  <div class="vertical-menu">
+    <a href="#" class="active">Main Dishes</a>
+    <a href="#">Appetizers</a>
+    <a href="#">Salads</a>
+    <a href="#">Desserts</a>
+    <a href="#">Drinks</a>
+  </div>
+  <div class="internal-body">
+    <h2>Today's Recipe</h2>
+	<h3>Yabrak (Stuffed Grape Leaves)</h3>
+	<img src="yabrak.jpg" alt="Yabrak Dish" class="image2">
+	<h4>Ingredients</h4>
+	<ul>
+	  <li>500 gm Grape leaves</li>
+	  <li>250 gm White short grain rice (I use basmati rice)</li>
+	  <li>500 gm of ground meat (50% beef – 50% lamb) or use all beef</li>
+	  <li>1 tsp Syrian spice mix</li>
+	  <li>1/2 tsp 7-Aleppo-condiment</li>
+	  <li>1 tsp salt</li>
+	  <li>1-2 fresh lemons</li>
+	  <li>1-2 Sour grapes juice</li>
+	</ul>
+	<h4>Directions</h4>
+	<ol>
+	  <li>I deboned the lamb shoulders and ground it , mixed the lamb meat, beef , washed the rice and left around 1/4 cup of water over the rice and mix it with the meat and spices. In another pot I prepared the bones for the stock .</li>
+	  <li>leave the frozen grape leaves to defrost, don’t try to flatten them before they are completely defrosted , they will break.
+          If you are using a jar, carefully take the leaves out, wash them from the salt, then boil them in the hot water for couple of minutes to soften.</li>
+	  <li>boil a pot of hot water, open the rolled leaves carefully, and drop them in the hot water for couple of minutes to soften . Move them to a strainer to drain and cool before stuffing.
+          I prefer cooking my food in clay pot or ceramic. I soaked my clay pot in water for at least 15 minutes  </li>
+	  <li>Open the leaf and turn the back side up facing you, add around small spoon and stretch it along the top (when you roll you will have the smooth side for cooking) close both ends over the stuffing , and roll the leaf, don’t tight the roll, the rice will not cook properly and soak the juice, it will turn dry, also don’t roll it very loose the stuffing will come out during the cooking.</li>
+	  <li>Start layering the grape leave in the bottom of the pot, add one cup and a half of stock and 1 1/2 cup of tap water, (you can use stock only if you prefer- i mixed the liquid I used two kinds of meat) the water has to cover the leaves. look at the photo above.
+          You can easily cook it in a stainless steel pot on top of the stove, start at medium high and when it starts boiling lower the heat and continue cooking till the rice and meat are cooked completely.</li>
+	  <li>since I am baking my clay pot in the oven , and the pot doesn’t have a cover I used a foil paper, I covered my leaves with parchment paper, then a plate to keep them properly cooked, I covered the pot with foil paper and baked it in a warm 400F oven until it starts to boil, then I lowered the heat to 350F and continued cooking. I added the fresh lemon after it boiled, ( the lemon juice will turn the leaves woody and hard if added before the pot started boiling…this is very important). Taste one grape leaf to make sure the stuffing is cooked completely.
+          </li>
+	</ol>
+	<p>Serve the Grape Leaves with home made yogurt, or Greek style yogurt.</p>
+  </div>
+</body>
+</html>
